# payment-request-vision

./: pyproject.toml
app/services/: ocr_service.py
